Applied Week3 changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Webprogramming Lecture Practice</title>
   </head>
   <body>
-    <table border="1">
+    <center>
+    <hr>
+    <h1>Webprogramming Results</h1>
+    <h2>Sanghyun Lee</h2>
+    <table border="1" width="100%">
       <tr>
         <td>Week</td>
         <td>Subject</td>
@@ -41,6 +45,6 @@
         <td>-</td>
         <td>-</td>
       </tr>
-    </table>
+      </center>
   </body>
 </html>
