--- a/index.html
+++ b/index.html
@@ -2,46 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Webprogramming Lecture Practice</title>
+    <title>Webprogramming Week3</title>
   </head>
   <body>
     <center>
     <hr>
-    <h1>Webprogramming Results</h1>
+    <h1>Webprogramming Results : Week 3</h1>
     <h2>Sanghyun Lee</h2>
     <table border="1" width="100%">
       <tr>
-        <td>Week</td>
-        <td>Subject</td>
-        <td>Path</td>
+        <td><h3>Subject</h3></td>
+        <td><h3>Path</h3></td>
       </tr>
       <tr>
-        <td>1</td>
-        <td>Orientation</td>
+        <td>html5</td>
+        <td><a href="site03/html5.html">Click!</a></td>
+      </tr>
+      <tr>
+        <td>Mozart</td>
+        <td><a href="site03/Mozart.html">Click!</a></td>
+      </tr>
+      <tr>
+        <td>form</td>
+        <td><a href="site03/form.html">Click!</a></td>
+      </tr>
+      <tr>
         <td>-</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>HTML Basics</td>
-        <td><a href="site02/index.html">Click! for index.html</a></td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Structures of HTML5 and Web Forms</td>
-        <td><a href="site03/index.html">Click! for index.html</a></td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>CSS Basics</td>
         <td>-</a></td>
       </tr>
       <tr>
-        <td>5</td>
         <td>-</td>
         <td>-</td>
       </tr>
       <tr>
-        <td>6</td>
         <td>-</td>
         <td>-</td>
       </tr>
