--- a/site03/index.html
+++ b/site03/index.html
@@ -1,59 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>HTML5 Structures : Use of Symantec Tags</title>
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-
-    .header {
-      width: 100%;
-      height: 15%;
-      background: yellow;
-    }
-
-    .nav {
-      width: 15%;
-      height: 70%;
-      float: left;
-      background: orange;
-    }
-
-    .section {
-      width: 70%;
-      height: 70%;
-      float: left;
-      background: olivedrab;
-    }
-
-    .aside {
-      width: 15%;
-      height: 70%;
-      float: left;
-      background: orange;
-    }
-
-    .footer {
-      width: 100%;
-      height: 15%;
-      clear: both;
-      background: plum;
-    }
-  </style>
-</head>
-
-<body>
-  <header class="header">header</header>
-  <nav class="nav">nav</nav>
-  <section class="section">section</section>
-  <aside class="aside">aside</aside>
-  <footer class="footer">footer</footer>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>Webprogramming Week3</title>
+  </head>
+  <body>
+    <center>
+    <hr>
+    <h1>Webprogramming Results : Week 3</h1>
+    <h2>Sanghyun Lee</h2>
+    <table border="1" width="100%">
+      <tr>
+        <td><h3>Subject</h3></td>
+        <td><h3>Path</h3></td>
+      </tr>
+      <tr>
+        <td>html5</td>
+        <td><a href="site03/html5.html">Click!</a></td>
+      </tr>
+      <tr>
+        <td>Mozart</td>
+        <td><a href="site03/Mozart.html">Click!</a></td>
+      </tr>
+      <tr>
+        <td>form</td>
+        <td><a href="site03/form.html">Click!</a></td>
+      </tr>
+      <tr>
+        <td>-</td>
+        <td>-</a></td>
+      </tr>
+      <tr>
+        <td>-</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>-</td>
+        <td>-</td>
+      </tr>
+      </center>
+  </body>
 </html>
