--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
       <tr>
         <td>1</td>
         <td>Orientation</td>
-        <td>-</td>
+        <td>No Contents</td>
       </tr>
       <tr>
         <td>2</td>
         <td>HTML Basics</td>
-        <td><a href="site02/index.html">Click! for index.html</a></td>
+        <td><a href="site02/index.html">Click for table of contents!</a></td>
       </tr>
       <tr>
         <td>3</td>
         <td>Structures of HTML5 and Web Forms</td>
-        <td><a href="site03/index.html">Click! for index.html</a></td>
+        <td><a href="site03/index.html">Click for table of contents!</a></td>
       </tr>
       <tr>
         <td>4</td>
         <td>CSS Basics</td>
-        <td>-</a></td>
+        <td><a href="site04/index.html">Click for table of contents!</a></td>
       </tr>
       <tr>
         <td>5</td>
