--- a/site02/index.html
+++ b/site02/index.html
@@ -16,7 +16,7 @@
       </tr>
       <tr>
         <td>Adventure</td>
-        <td><a href="https://github.com/MUMBLEBERRY/WebProgramming/blob/master/site02/adventure_201502314.html">Click!</a></td>
+        <td><a href="site02\adventure_201502314.html">Click!</a></td>
       </tr>
       <tr>
         <td>-</td>
